# Pharosa-rs

./: .gitignore  Cargo.toml
src/: lib.rs  macros.rs  main.rs
src/camera/: mod.rs  perspective.rs
src/core/: film.rs  intersection.rs  mod.rs  ray.rs  spectrum.rs
src/gui/: config.rs  event_loop.rs  kernel.rs  mod.rs  setup.rs
src/integrator/: albedo.rs  mod.rs  path_tracing.rs  simple.rs  smallpt.rs
src/primitive/: mod.rs
src/primitive/geometries/: dynamic.rs  mod.rs  sphere.rs  triangle.rs
src/primitive/materials/: mod.rs  simple.rs
src/primitive/materials/bsdf/: mod.rs  simple.rs
src/primitive/materials/texture/: mod.rs  uniform.rs
src/sampler/: fake.rs  independent.rs  mod.rs
src/scene/: mod.rs
src/utils/: mod.rs
