[package]
name = "pharosa"
version = "0.1.0"
authors = ["郑逢时 <962907278@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["float32"]
float32 = []
float64 = []

[dependencies]
rand = "0.7.3"
cgmath = "0.17.0"
image = "0.23.4"
num-traits = "0.2.2"
minifb = "0.16.0"
derive_more = "0.7.1"
more-asserts = "0.2.1"
dyn-clone = "1.0.1"
lazy_static = "1.4.0"
